--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
   "author": "Francesca Marino <fjmarino90@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "knex": "^0.95.4",
-    "pg": "^8.6.0"
+    "pg": "^8.6.0",
+    "pg-connection-string": "^2.5.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
