--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Francesca Marino <fjmarino90@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "knex": "^0.95.4",
