--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "express": "^4.17.1",
     "knex": "^0.95.4",
     "pg": "^8.6.0",
-    "pg-connection-string": "^2.5.0"
+    "pg-connection-string": "^2.5.0",
+    "serverless-http": "^2.7.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
