--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Francesca Marino <fjmarino90@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
