--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Francesca Marino <fjmarino90@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "aws-sdk": "^2.889.0",
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
